--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@ Ban Thôngkang Hom 10, No 395, Sisatanak District, Vientiane, Laos 01000</span>
         </div>
         <div>
           <i class="fas fa-clock"></i>
-          <span data-i18n="contact.hours">เปิดบริการทุกวัน 10:00 - 22:00 น.</span>
+          <span data-i18n="contact.hours">เปิดบริการ 10:00 - 22:00 น.ปิดทุกวันจันทร์ </span>
         </div>
       </div>
       
@@ -796,7 +796,7 @@ const translations = {
     "menu.item1.name": "Tom Yum Goong", "menu.item1.desc": "Zesty and intensely sour-spicy river prawn soup.", "menu.item2.name": "Krualuang Pad Thai", "menu.item2.desc": "Authentic Pad Thai with fresh shrimp and sweet egg.", "menu.item3.name": "Green Curry with Chicken", "menu.item3.desc": "Aromatic green curry with holy basil.", "menu.item4.name": "Massaman Beef", "menu.item4.desc": "Traditional Massaman curry with rich, fragrant spices.",
     "gallery.title": "Gallery", "gallery.desc": "Ambiance and signature dishes from Krualuang.",
     "contact.title": "Contact Us", "contact.info": "Contact Information", "contact.social": "Follow Us", "contact.form.title": "Send Us a Message", "contact.form.name": "Name", "contact.form.email": "Email", "contact.form.phone": "Phone", "contact.form.subject": "Subject", "contact.form.message": "Message", "contact.form.submit": "Send Message",
-    "contact.address": "Ban Tongkang, Soi 10, No. 395, Sisattanak District, Vientiane Capital, Laos 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "Open Daily 10:00 - 22:00"
+    "contact.address": "Ban Tongkang, Soi 10, No. 395, Sisattanak District, Vientiane Capital, Laos 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "Open 10:00 - 22:00 Close every Monday"
   },
   la: {
     "menu.home": "ໜ້າທຳອິດ", "menu.about": "ກ່ຽວກັບພວກເຮົາ", "menu.franchise": "ແຟຣນໄຊส์", "menu.menu": "ເມນູ", "menu.gallery": "ຄັງຮູບພາບ", "menu.contact": "ຕິດຕໍ່",
@@ -832,7 +832,7 @@ const translations = {
     "menu.item1.name": "ຕ້ມຍຳກຸ້ງ", "menu.item1.desc": "ຕ້ມຍຳກຸ້ງແມ່ນ້ຳລົດຊາດຈັດຈ້ານ ຫວານສົ້ມເຜັດຮ້ອນ", "menu.item2.name": "ຜັດໄທຄົວຫຼວງ", "menu.item2.desc": "ຜັດໄທສູດຕົ້ນຕຳຮັບ ກຸ້ງສົດໃສ່ໄຂ່ຫວານ", "menu.item3.name": "ແກງຂຽວຫວານໃສ່ໄກ່", "menu.item3.desc": "ແກງຂຽວຫວານໃສ່ໃບໂຫລະພາ ຫອມເຄື່ອງແກງ", "menu.item4.name": "ມັດສະມັ້ນຊີ້ນ", "menu.item4.desc": "ມັດສະມັ້ນຊີ້ນສູດໂບຮານ ຫວານມັນຫອມເຄື່ອງເທດ",
     "gallery.title": "ຄັງຮູບພາບ", "gallery.desc": "ບັນຍາກາດ ແລະ ເມນູອາຫານຈາກຄົວຫຼວງ",
     "contact.title": "ຕິດຕໍ່ພວກເຮົາ", "contact.info": "ຂໍ້ມູນຕິດຕໍ່", "contact.social": "ຕິດຕາມພວກເຮົາ", "contact.form.title": "ສົ່ງຂໍ້ຄວາມຫາພວກເຮົາ", "contact.form.name": "ຊື່-ນາມສະກຸນ", "contact.form.email": "ອີເມວ", "contact.form.phone": "ເບີໂທລະສັບ", "contact.form.subject": "ຫົວຂໍ້", "contact.form.message": "ຂໍ້ຄວາມ", "contact.form.submit": "ສົ່ງຂໍ້ຄວາມ",
-    "contact.address": "ບ້ານ ທົ່ງກາງ, ຊອຍ 10, ເລກທີ 395, ເມືອງ ສີສັດຕະນາກ, ນະຄອນຫຼວງວຽງຈັນ, ລາວ 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "ເປີດບໍລິການທຸກມື້ 10:00 - 22:00"
+    "contact.address": "ບ້ານ ທົ່ງກາງ, ຊອຍ 10, ເລກທີ 395, ເມືອງ ສີສັດຕະນາກ, ນະຄອນຫຼວງວຽງຈັນ, ລາວ 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "ເປີດບໍລິການ 10:00 - 22:00 ປິດວັນຈັນ"
   },
   zh: {
     "menu.home": "首页", "menu.about": "关于我们", "menu.franchise": "特许经营", "menu.menu": "菜单", "menu.gallery": "图库", "menu.contact": "联系我们",
