--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ const translations = {
     "menu.item1.name": "ต้มยำกุ้ง", "menu.item1.desc": "ต้มยำกุ้งแม่น้ำรสชาติจัดจ้าน เปรี้ยวเผ็ดร้อน", "menu.item2.name": "ผัดไทยครัวหลวง", "menu.item2.desc": "ผัดไทยสูตรต้นตำรับ กุ้งสดไข่หวาน", "menu.item3.name": "แกงเขียวหวานไก่", "menu.item3.desc": "แกงเขียวหวานไก่ใบโหระพา หอมเครื่องแกง", "menu.item4.name": "มัสมั่นเนื้อ", "menu.item4.desc": "มัสมั่นเนื้อสูตรโบราณ หวานมันหอมเครื่องเทศ",
     "gallery.title": "แกลเลอรี่", "gallery.desc": "บรรยากาศและเมนูอาหารจากครัวหลวง",
     "contact.title": "ติดต่อเรา", "contact.info": "ข้อมูลติดต่อ", "contact.social": "ติดตามเรา", "contact.form.title": "ส่งข้อความถึงเรา", "contact.form.name": "ชื่อ-นามสกุล", "contact.form.email": "อีเมล", "contact.form.phone": "เบอร์โทรศัพท์", "contact.form.subject": "หัวข้อ", "contact.form.message": "ข้อความ", "contact.form.submit": "ส่งข้อความ",
-    "contact.address": "บ้านทงกาง ซอย 10, เลขที่ 395, เขตศรีสัตตนาค, นครหลวงเวียงจันทน์, ลาว 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "เปิดบริการทุกวัน 10:00 - 22:00 น."
+    "contact.address": "บ้านทงกาง ซอย 10, เลขที่ 395, เขตศรีสัตตนาค, นครหลวงเวียงจันทน์, ลาว 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "เปิดบริการ 10:00 - 22:00 น.ปิดทุกวันจันทร์"
   },
   en: {
     "menu.home": "Home", "menu.about": "About Us", "menu.franchise": "Franchise", "menu.menu": "Menu", "menu.gallery": "Gallery", "menu.contact": "Contact",
