--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ const translations = {
   },
   en: {
     "menu.home": "Home", "menu.about": "About Us", "menu.franchise": "Franchise", "menu.menu": "Menu", "menu.gallery": "Gallery", "menu.contact": "Contact",
-    "hero.eyebrow": "Krua luang — Authentic Royal Thai Taste", "hero.title": "Royal Thai Taste", "hero.desc": "Experience exquisite Thai cuisine and franchise opportunities across Laos and Thailand.", "hero.cta1": "View Franchise", "hero.cta2": "Book a Visit",
+    "hero.eyebrow": "Krua Luang — Authentic Royal Thai Taste", "hero.title": "Royal Thai Taste", "hero.desc": "Experience exquisite Thai cuisine and franchise opportunities across Laos and Thailand.", "hero.cta1": "View Franchise", "hero.cta2": "Book a Visit",
     "about.title": "About Krua Luang", "about.text1": "Krua Lang is an authentic Thai restaurant brand offering unique traditional Thai flavors, meticulously prepared with high-quality ingredients.", "about.text2": "We prioritize the dining experience by blending warm, friendly service with the refinement of authentic Thai cuisine in a Fine Dining style.", "about.text3": "Krualuang currently has branches in Thailand and is expanding franchise opportunities into Laos to share authentic Thai flavors globally.",
     "franchise.title": "Franchise Packages",
     "franchise.desc": "Join Krua Luang with franchise packages designed for all levels of entrepreneurs.",
