--- a/index.html
+++ b/index.html
@@ -244,4 +244,5 @@ Ban Thôngkang Hom 10, No 395, Sisatanak District, Vientiane, Laos 01000</span>
 <a href="#" class="back-to-top" id="backToTop">↑</a>
 
 </body>
+  <script src="js/script.js"></script>
 </html>
