--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <title>ครัวหลวง — Royal Thai Cuisine</title>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
   <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-
 <header>
   <nav>
     <div class="brand-container"> 
@@ -243,6 +242,8 @@ Ban Thôngkang Hom 10, No 395, Sisatanak District, Vientiane, Laos 01000</span>
 
 <a href="#" class="back-to-top" id="backToTop">↑</a>
 
+<!-- JavaScript Files -->
+<script src="js/script.js"></script>
+<script src="js/main.js"></script>
 </body>
-  <script src="js/script.js"></script>
 </html>
