--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <div class="menu-item">
       <img src="images/menu/menu_massaman.jpg" alt="มัสมั่น">
       <div class="menu-item-content">
-        <h3 data-i18n="menu.item4.name">มัสมั่นเนื้อ</h3>
-        <p data-i18n="menu.item4.desc">มัสมั่นเนื้อสูตรโบราณ หวานมันหอมเครื่องเทศ</p>
+        <h3 data-i18n="menu.item4.name">มัสมั่นไก่ หมู</h3>
+        <p data-i18n="menu.item4.desc">มัสมั่นสูตรโบราณ หวานมันหอมเครื่องเทศ</p>
         <div class="price" data-i18n="menu.item4.price">250 บาท</div>
       </div>
     </div>
