--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@ Ban Thôngkang Hom 10, No 395, Sisatanak District, Vientiane, Laos 01000</span>
 <a href="#" class="back-to-top" id="backToTop">↑</a>
 
 <!-- JavaScript Files -->
+<script src="js/translations.js"></script>
 <script src="js/script.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
