--- a/index.html
+++ b/index.html
@@ -61,9 +61,16 @@
     <input type="text" id="menuImage" placeholder="ชื่อไฟล์รูป (เช่น menu_pad_krapao.jpg)">
     <button id="generateMenuBtn">สร้างเมนู</button>
   </div>
+ </div>
 
-  <pre id="generatedKeys"></pre>
-  <div id="menuPreview"></div>
+<!-- แสดงผล JSON และปุ่มคัดลอก -->
+<pre id="generatedKeys" style="background:#111;color:#0f0;padding:10px;border-radius:10px;white-space:pre-wrap;"></pre>
+<button id="copyJsonBtn" style="display:none;margin-top:10px;">📋 คัดลอกโค้ด JSON</button>
+
+<!-- พื้นที่แสดงตัวอย่างเมนู -->
+<div id="menuPreview"></div>
+</section>
+
 </section>
 
 <section id="about">
