--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Ban Thôngkang Hom 10, No 395, Sisatanak District, Vientiane, Laos 01000</span>
         </div>
         <div>
           <i class="fas fa-envelope"></i>
-          <span data-i18n="contact.email">krualuanglao@gmail.com.com</span>
+          <span data-i18n="contact.email">krualuanglao@gmail.com</span>
         </div>
         <div>
           <i class="fas fa-clock"></i>
