--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
         <div class="price" data-i18n="menu.item4.price">250 บาท</div>
       </div>
     </div>
+
+    <div class="menu-item">
+      <img src="images/menu/menu_salt_fried_rice.jpg" alt="ข้าวผัดเกลือ">
+      <div class="menu-item-content">
+        <h3 data-i18n="menu.item5.name">ข้าวผัดเกลือ</h3>
+        <p data-i18n="menu.item5.desc">ข้าวผัดเกลือ (MUST TRY) อีกหนึ่งเมนูเด็ด เมนูดังยืนหนึ่งของร้านเรา ข้าวผัดร้อนๆนุ่มหนึบเม็ดเรียงสวย...</p>
+        <div class="price" data-i18n="menu.item5.price">120 บาท</div>
+      </div>
+    </div>
   </div>
 </section>
 
