--- a/index.html
+++ b/index.html
@@ -52,21 +52,9 @@
   </div>
 </section>
 <!-- เพิ่มตรงนี้ใน HTML ของคุณ -->
-<section id="menu-generator" class="section-dark">
-  <h2>เพิ่มเมนูใหม่อัตโนมัติ</h2>
-  <div class="menu-form">
-    <input type="text" id="menuNameTh" placeholder="ชื่อเมนู (ไทย)">
-    <input type="text" id="menuDescTh" placeholder="รายละเอียด (ไทย)">
-    <input type="text" id="menuPriceTh" placeholder="ราคา (บาท)">
-    <input type="text" id="menuImage" placeholder="ชื่อไฟล์รูป (เช่น menu_pad_krapao.jpg)">
-    <button id="generateMenuBtn">สร้างเมนู</button>
-  </div>
- 
-    <pre id="generatedKeys" style="background:#111;color:#0f0;padding:10px;border-radius:10px;white-space:pre-wrap;"></pre>
-  <button id="copyJsonBtn" style="display:none;margin-top:10px;">📋 คัดลอกโค้ด JSON</button>
-
-    <div id="menuPreview"></div>
-</section>
+<section id="menu-generator" class="section-dark admin-tool">
+  <h2>เครื่องมือสร้างเมนูอัตโนมัติ (Admin Only)</h2>
+  </section>
 
 <section id="about">
   <h2 data-i18n="about.title">เกี่ยวกับครัวหลวง</h2>
