--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
         <div><i class="fas fa-map-marker-alt"></i>
           <span>KRUA LUANG - Royal Thai Cuisine Vientiane<br>Ban Thôngkang Hom 10, No 395, Sisatanak District, Vientiane, Laos 01000</span>
         </div>
-        <div><i class="fas fa-phone"></i><span>02-345-6789</span></div>
+        <div><i class="fas fa-phone"></i><span>+856 020-566 05450</span></div>
         <div><i class="fas fa-envelope"></i><span>krualuanglao@gmail.com</span></div>
-        <div><i class="fas fa-clock"></i><span>เปิดบริการ 10:00 - 22:00 น. ปิดวันจันทร์</span></div>
+        <div><i class="fas fa-clock"></i><span>เปิดบริการ 10:00 - 22:00 น. ปิดวันอาทิตย์</span></div>
       </div>
 
       <h3 data-i18n="contact.social">ติดตามเรา</h3>
