--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
         <div><i class="fas fa-phone"></i><span>+856 020-566 05450</span></div>
         <div><i class="fas fa-envelope"></i><span>krualuanglao@gmail.com</span></div>
-        <div><i class="fas fa-clock"></i><span>เปิดบริการ 10:00 - 22:00 น. ปิดวันอาทิตย์</span></div>
+        <div><i class="fas fa-clock"></i><span>เปิดบริการ 10:00 - 22:00 น. ปิดวันอาทิตย์ (Close Sunday)</span></div>
       </div>
 
       <h3 data-i18n="contact.social">ติดตามเรา</h3>
