--- a/index.html
+++ b/index.html
@@ -228,26 +228,26 @@
       <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
         <input type="hidden" name="access_key" value="89ce9f87-29e1-4840-8b41-7c5a0e7e6263">
         <div class="form-group">
-          <label for="name">ชื่อ-นามสกุล</label>
+          <label for="name">ชื่อ-นามสกุล Name</label>
           <input type="text" id="name" name="name" required>
         </div>
         <div class="form-group">
-          <label for="email">อีเมล</label>
+          <label for="email">อีเมล E-mail</label>
           <input type="email" id="email" name="email" required>
         </div>
         <div class="form-group">
-          <label for="phone">เบอร์โทรศัพท์</label>
+          <label for="phone">เบอร์โทรศัพท์ Tel</label>
           <input type="tel" id="phone" name="phone">
         </div>
         <div class="form-group">
-          <label for="subject">หัวข้อ</label>
+          <label for="subject">หัวข้อ Topic</label>
           <input type="text" id="subject" name="subject" required>
         </div>
         <div class="form-group">
-          <label for="message">ข้อความ</label>
+          <label for="message">ข้อความ Massage</label>
           <textarea id="message" name="message" required></textarea>
         </div>
-        <button type="submit" class="submit-btn">ส่งข้อความ</button>
+        <button type="submit" class="submit-btn">ส่งข้อความ Send</button>
       </form>
     </div>
   </div>
